--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,12 @@
+.border-gray{
+    border: 0.5px solid !important;
+    border-color:#5e5e5e !important
+}
+.two-columns{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
