--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -6,7 +6,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-
+.three-columns{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 100vh !important;
+    gap: 15px
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
