--- a/styles/global.css
+++ b/styles/global.css
@@ -1,46 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
 body {
-    margin: 0;
+  margin: 0;
 
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
-.modal-container{
-  background-color: #1f2937;
+.modal-container {
+  background-color: #121212;
 }
 .ant-modal-content {
   height: 100%;
-  background-color: #1f2937 !important;
+  background-color: #121212 !important;
 }
-.ant-modal-body{
+.ant-modal-body {
   height: 100%;
-  background-color: #1f2937;
+  background-color: #121212;
 }
-.ant-modal-close-x{
-  color:white
+.ant-modal-close-x {
+  color: white;
 }
 a {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
-.cream{
- background-color: #FFFFFF !important 
+.cream {
+  background-color: #ffffff !important;
 }
-.hover-black-text:hover{
+.hover-black-text:hover {
   color: #000000 !important;
 }
-.bg-header{
-  background-image: linear-gradient(#B61E17, #0B0B0B)
+.bg-header {
+  background-image: linear-gradient(#b61e17, #0b0b0b);
 }
-.banner-container{
-display: grid;
-grid-template-columns: 1fr 1fr;
+.dashboard-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 100vh !important;
+  gap: 15px;
+  overflow: scroll;
 }
-.nft-info-img{
+.banner-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.nft-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.nft-info-img {
   width: 20%;
 }
-.landing-cart{
+.landing-cart {
   background-color: #121212;
   margin: 10px;
   display: flex;
@@ -49,27 +60,55 @@ grid-template-columns: 1fr 1fr;
   text-align: left;
   padding: 3px;
 }
-.club-cart__container{
+.club-cart__container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-
 }
-.square{
+.square {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
-@media (max-width:639px) {
-  .banner-container{
-    display: block
-    }
-    .nft-info-img{
-      width: 33.3%;      
-    }
-    .sm-none{
-      display: none;
-    }
-    .club-cart__container{
-      display: block
-    }
+@media (max-width: 768px) {
+  .dashboard-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100vh !important;
+    gap: 15px;
+    text-align: center;
+    
+  }
+}
+@media (max-width: 640px) {
+  .dashboard-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100vh !important;
+    gap: 15px
+  }
+  .banner-container {
+    display: block;
+  }
+  .nft-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'b'
+      'a';
+  }
+  .item1 {
+    grid-area: a;
+  }
+  .item2 {
+    grid-area: b;
+  }
+  .nft-info-img {
+    width: 33.3%;
+  }
+  .sm-none {
+    display: none;
+  }
+  .club-cart__container {
+    display: block;
+  }
 }
