--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,7 @@ a {
 }
 .bg-header {
   background-image: linear-gradient(#b61e17, #0b0b0b);
+  height: 70px;
 }
 .dashboard-container{
   display: grid;
